--- a/Props.css
+++ b/Props.css
@@ -5,15 +5,16 @@
 body,html {
     margin: 0;
     padding: 0;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .MainContainer {
-    display: flex;
+    display: block;
     height: 100vh;
-    width: 300vw;
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(158,0,255,1) 100%);
+    width: 500vw;
+    background-image: url("/images/hugeSpaceBurn.png");
+    background-size: cover;
+    background-position: center;
 }
 
 .BrownBlock {
