--- a/stylesheets/Blinds.css
+++ b/stylesheets/Blinds.css
@@ -1,3 +1,9 @@
+:root {
+
+    --navWidth: 20vw;
+    --navHalf: calc(var(--navWidth) / -2);
+}
+
 * {
     box-sizing: border-box;
     /*overflow: hidden;*/
@@ -10,9 +16,12 @@ body,html {
     background-color: black;
 }
 
-#canvas {
+#canvasVertical {
     display: none;
-    height: auto;
+}
+
+#canvasHorizontal {
+    display: none;
 }
 
 #backward{
@@ -33,7 +42,6 @@ body,html {
 
 #megaBox1{
     position: fixed;
-    display: flex;
     z-index: 3
 }
 
@@ -45,6 +53,53 @@ body,html {
 
 #megaBox3{
     position: absolute;
-    display: flex;
     z-index: 1;
+}
+
+#nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    height: 5%;
+    width: var(--navWidth);
+    left: 50%;
+    margin-left: var(--navHalf);
+    top: 90%;
+    z-index: 11;
+}
+
+#nav > * {
+    opacity: 0.6;
+    height: 90%;
+    aspect-ratio: 1/1;
+    background-color: dimgray;
+    border: solid 2px black;
+    border-radius: 20px;
+    transition: all 0.5s ease;
+}
+
+#nav > :nth-child(1):hover {
+    opacity: 1;
+    background-color: #a4c25e;
+}
+
+#nav > :nth-child(2):hover {
+    opacity: 1;
+    background-color: #ebe36b;
+}
+
+#nav > :nth-child(3):hover {
+    opacity: 1;
+    background-color: #e28546;
+}
+
+#nav > :nth-child(4):hover {
+    opacity: 1;
+    background-color: #9cbbd8;
+}
+
+.active {
+    color: white;
+    background-color: blue;
 }
