--- a/stylesheets/Blinds.css
+++ b/stylesheets/Blinds.css
@@ -91,7 +91,7 @@ body,html {
 
 #nav > :nth-child(3):hover {
     opacity: 1;
-    background-color: #e28546;
+    background-color: #ff6b32;
 }
 
 #nav > :nth-child(4):hover {
@@ -100,6 +100,5 @@ body,html {
 }
 
 .active {
-    color: white;
-    background-color: blue;
+    opacity: 1 !important;
 }
