--- a/stylesheets/Psuedo.css
+++ b/stylesheets/Psuedo.css
@@ -5,8 +5,24 @@
 }
 
 body,html {
-    display: flex;
     margin: 0;
     padding: 0;
     background-color: black;
 }
+
+#mainContainer{
+    height: 100vh;
+    width: auto;
+}
+
+#cardBoardWrapper{
+
+}
+
+#cardBoard{
+    height: 100%;
+    width: 100%;
+    background-image: url("../images/cardBoardtexture.png");
+    background-size: cover;
+}
+
