--- a/stylesheets/Psuedo.css
+++ b/stylesheets/Psuedo.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     font-family: "Source Code Pro", serif;
-    /*overflow: hidden;*/
+    overflow-x: hidden;
 }
 
 body,html {
@@ -11,7 +11,7 @@ body,html {
 }
 
 #mainContainer{
-    height: 100vh;
+    height: 200vh;
     width: auto;
 }
 
