--- a/stylesheets/playGround.css
+++ b/stylesheets/playGround.css
@@ -31,7 +31,7 @@ body,html {
     width: 100vw;
 }
 
-#hid{
+#layer0{
     z-index: 888;
     position: absolute;
     top: 0;
@@ -159,4 +159,8 @@ body,html {
 
 .layer3{
     background-color: maroon;
+}
+
+.layer4{
+    background-color: #32C6FF;
 }
