--- a/stylesheets/workshop.css
+++ b/stylesheets/workshop.css
@@ -16,6 +16,11 @@
     overflow: hidden;
 }
 
+.vignette {
+    -webkit-box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
+    -moz-box-shadow:    inset 0px 0px 85px rgba(0,0,0,0.4);
+    box-shadow:         inset 0px 0px 85px rgba(0,0,0,0.4);
+}
 
 body,html {
     margin: 0;
@@ -24,102 +29,120 @@ body,html {
 }
 
 #mainContainer{
-    background-color: #ff6b32;;
+    display: flex;
+    flex-direction: column;
+    background-color: #D232FF;
     position: relative;
     height: 100vh;
     width: 100vw;
+    color:white;
+    text-align: center;
 }
 
-.ImageOfMe{
+.skillsContainer{
     display: flex;
+    height: 100vh;
+}
+
+.skills{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    overflow: hidden;
     height: 100%;
     width: 100%;
 }
 
-.Intro {
-    color: black;
-    margin-right: 5%;
-    max-width: 50%;
+.skillsImages{
+    display: flex;
+    flex-direction: row;
+    height: 40%;
 
 }
 
-.Intro p{
-    font-weight: bold;
-    text-align: center;
-    font-size: 2vw;
-}
-
-#imgme {
-    background-image: url(../images/styledME.png);
-    background-repeat: no-repeat;
-    background-size: contain;
+.skillsImages > *{
+    height: 100%;
     width: 100%;
-    height: 100%
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#html{
+    background-image: url("../images/Logos/htmlLogo.png");
+}
+
+#css {
+    background-image: url("../images/Logos/cssLogo.png");
+}
+
+#javascript{
+    background-image: url("../images/Logos/jsLogo.png");
+}
+
+.skillsContainer{
+    display: flex;
+    flex-direction: column;
+    padding: 5%;
+    padding-top: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.skillsDemos{
+    display: flex;
+    flex-direction: row;
+    height: 50%;
+    width: 100%;
+    border: solid 2px black;
+    border-radius: 10px;
+}
+.skillsDemos > *{
+    border: solid 2px black;
+    background-color: dimgray;
+    height: 100%;
+    width: 100%;
+}
+
+.library{
+    border: 2px solid black;
+    height: 25%;
+    width: 100%;
 }
 
 .nav {
-    display: grid;
-    height: 20%;
-    width: 100%;
 
 }
 
 .NavBar{
-    margin-top: 5%;
+    padding: 5%;
     display: flex;
+    flex-grow: 1;
     justify-content: space-around;
-    height: 50%;
+    align-items: flex-end;
+    height: 100%;
     width: 100%;
 }
 
 .button{
+    overflow: visible;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
     margin-right: 5%;
     margin-left: 5%;
     text-align: center;
     font-size: 2vw;
-    line-height: var(--navHeightHalf);
-    width: 90%;
-    border: solid 5px black;
+    pointer-events: all;
+    width: 100%;
+    height: auto;
+    border: solid 5px white;
     border-radius: 10px;
-    box-shadow: 2px 1px 25px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 2px 1px 25px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 2px 1px 25px 0px rgba(0,0,0,0.75);
+    transition: all 0.5s ease;
 }
 
-.vignette {
-    -webkit-box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
-    -moz-box-shadow:    inset 0px 0px 85px rgba(0,0,0,0.4);
-    box-shadow:         inset 0px 0px 85px rgba(0,0,0,0.4);
-}
-
-.headerP {
-    font-size: 3vw;
-}
 
 @media (max-width: 480px) {
-    .ImageOfMe {
-        display: block;
-    }
-    .Intro {
-        height: 100%;
-        width: 100vw;
-        margin-right: 0;
-        max-width: 100%;
-    }
-    .Intro p{
-        font-size: 2.5vw;
-    }
-    #headerP{
-        font-size: 3.5vw;
-    }
-    #imgme{
-        height: 50%
-    }
-    .nav {
-        position: absolute;
-        bottom: 0;
-    }
-    .button{
-        font-size: 4vw;
-    }
+
 }
