--- a/stylesheets/playGround.css
+++ b/stylesheets/playGround.css
@@ -112,6 +112,7 @@ body,html {
     border: solid 5px white;
     border-radius: 10px;
     transition: all 0.5s ease;
+    cursor: pointer;
 }
 
 .button:hover{
