--- a/stylesheets/playGround.css
+++ b/stylesheets/playGround.css
@@ -51,7 +51,13 @@ h1 {
 
 p {
     overflow: visible;
+    position: relative;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    font-size: clamp(1rem, 2.5vw, 3rem)
 }
+
 
 #mainContainer{
     height: 100vh;
@@ -94,14 +100,7 @@ p {
     font-size: clamp(1.5rem, 4vw, 4rem);
 }
 
-.Intro p{
-    position: relative;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    font-size: clamp(1rem, 2.5vw, 3rem)
 
-}
 
 #imgme {
     background-image: url(../images/styledME.png);
@@ -113,6 +112,7 @@ p {
 }
 
 .nav {
+    overflow: visible;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -154,7 +154,7 @@ p {
 .button{
     margin: 2%;
     display: flex;
-    background-color: #ff6b32;;
+    background-color: #ff6b32;
     border-radius: 10px;
     align-items: center;
     justify-content: center;
@@ -180,14 +180,7 @@ p {
         background-position: 100% 50%;
     }
 
-
 }
-
-.buttonWrapper:hover >.button{
-    background-color: #39ff14;
-    /*box-shadow: 2px 1px 50px 0px rgba(50,196,255,0.8);*/
-}
-
 
 .vignette {
     -webkit-box-shadow: inset 0px 0px 85px rgba(0,0,0,0.4);
@@ -223,6 +216,13 @@ p {
     text-align: center;
     justify-self: center;
 }
+
+
+.skillsContainer p{
+    margin: 0;
+    padding: 2%;
+}
+
 
 .skillsContainer{
     overflow: auto;
@@ -272,11 +272,6 @@ p {
 
 #javascript{
     background-image: url("../images/Logos/jsLogo.png");
-}
-
-.skillsContainer p{
-    margin: 0;
-    padding: 2%;
 }
 
 .skillsDemos{
@@ -470,7 +465,7 @@ p {
 }
 
 .layer2{
-    background-color: #FF1178;
+    background-color: #B026FF;
 }
 
 .layer3{
@@ -488,7 +483,7 @@ p {
 
 .skillsPlum{
     font-size: small;
-    color: #d189fa;
+    color: #26E1FF;
 }
 
 .skillsGold{
@@ -523,6 +518,65 @@ p {
     background-color: white;
 }
 
+/*painful button section goes here*/
+/*layer 0*/
+#navBarHome .buttonWrapper > .button {
+    background-color: #ff6b32;
+}
+
+#buttonWrapperIntroSkills:hover > .button{
+    background-color: #B026FF;
+}
+#buttonWrapperIntroProjects:hover > .button{
+    background-color: #32C6FF;
+}
+#buttonWrapperIntroContact:hover > .button{
+    background-color: #39ff14;
+}
+/*layer 1*/
+#NavBarSkills .buttonWrapper > .button{
+    background-color: #B026FF;
+}
+
+#buttonWrapperSkillsHome:hover >.button{
+    background-color: #ff6b32;
+}
+#buttonWrapperSkillsProjects:hover >.button{
+    background-color: #32C6FF;
+}
+#buttonWrapperSkillsContact:hover >.button{
+    background-color: #39ff14;
+}
+/*layer 2*/
+#NavBarProjects .buttonWrapper > .button{
+    background-color: #32C6FF;
+}
+
+#buttonWrapperProjectHome:hover >.button{
+    background-color: #ff6b32;
+}
+#buttonWrapperProjectSkills:hover >.button{
+    background-color: #B026FF;
+}
+#buttonWrapperProjectContact:hover >.button{
+    background-color: #39ff14;
+}
+
+/*layer 3*/
+#NavBarContact .buttonWrapper >.button{
+    background-color: #39ff14;
+}
+#buttonWrapperContactHome > .button{
+    background-color: #ff6b32;
+}
+#buttonWrapperContactSkills > .button{
+    background-color: #B026FF;
+}
+#buttonWrapperContactProjects > .button{
+    background-color: #32C6FF;
+}
+
+
 @media (min-width: 0px) and (max-width: 500px) {
 
     .ImageOfMe {
@@ -541,10 +595,11 @@ p {
     .Intro p{
         font-size: clamp(1rem, 2.5vw, 2rem)
     }
-    .Intro h1{
+    h1{
         padding-top: 0;
         font-size: clamp(1rem, 4vw, 3rem);
     }
+
     #imgme{
         height: 40%
     }
@@ -590,7 +645,7 @@ p {
     .Intro p{
         font-size: clamp(1rem, 2.3vw, 1.3rem)
     }
-    .Intro h1{
+    h1{
         font-size: clamp(1.5rem, 4vw, 2rem);
     }
 
