--- a/stylesheets/Index.css
+++ b/stylesheets/Index.css
@@ -1,7 +1,29 @@
 :root {
-    --navHeight: 20dvh;
+    --navHeight: 10dvh;
     --navHeightHalf: calc(var(--navHeight) /2);
     --navWidthHalf: calc(100dvh * 0.8)
+}
+
+
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgba(0,0,0,0.6);
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #111111;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    pointer-events: all;
+    background: #666666;
 }
 
 @font-face {
@@ -24,37 +46,59 @@
     perspective: 800px;
 }
 
-body::-webkit-scrollbar-button {
-    width: 0;
-}
 
 body,html {
     margin: 0;
     padding: 0;
-    background-image: url("../images/BASSHECTORLOGO.png");
+    background-image: url("../images/Logos/BASSHECTORLOGOnobg.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     overflow: hidden;
 }
 
+body{
+
+}
+
+.loadingBlanket{
+    display: flex;
+    pointer-events: none;
+    position: absolute;
+    z-index: 9999;
+    width: 100dvw;
+    height: 100dvh;
+    background-color: rgba(0,0,0,1);
+    justify-content: center;
+    align-items: center;
+}
+
+#loadingBlanketText{
+    color: white;
+    pointer-events: none;
+    font-size: 4rem;
+}
+
 strong {
+    text-decoration: underline black solid;
     font-weight: bold !important;
 }
 
 h1 {
     overflow: visible;
     text-align: center;
-    color: white;
-    font-size: 4rem;
+    color: black;
+    font-size: clamp(1.5rem, 4vw, 4rem);
 }
 
 p {
     overflow: visible;
     position: relative;
-    color: white;
+    max-height: 20%;
+    color: black;
     font-weight: bold;
-    font-size: clamp(1rem, 2vw, 3rem)
+    padding-top: 2%;
+    font-size: clamp(1.5rem, 1.5vw, 3rem)
 }
 
 
@@ -64,12 +108,12 @@ p {
 }
 /* 00000000000000000000000000000000000000000000000000000000000000000000000000000*/
 #layer0{
+    pointer-events: none;
     display: flex;
     z-index: 888;
     position: absolute;
     top: 0;
     left: 0;
-    pointer-events: none;
 }
 
 #mainContainerHid{
@@ -93,10 +137,86 @@ p {
     max-height: 100%
 }
 
+.DarkMode{
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 95%;
+    z-index: 999;
+    padding-top: 10%;
+    background:radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 40%);
+    background-size: 200%;
+    width: 10%;
+    justify-content: flex-start;
+    display: flex;
+    transition: all 1s ease;
+    cursor: pointer;
+}
+
+.DarkMode:active{
+    background:radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(0,0,0,0) 40%);
+}
+
+.DarkMode.persistent {
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(0,0,0,0) 40%);
+    background-size: 200%;
+    background-position: 100% 50%;
+}
+
+.DarkMode:hover{
+    animation: mode-hum 1s;
+    background-position: 50% 50%;
+}
+
+.DarkMode.persistent:hover{
+    animation: mode-hum-dark 1s;
+    background-position: 50% 50%;
+}
+
+@keyframes mode-hum-dark {
+    0% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 50% 50%;
+    }
+}
+
+@keyframes mode-hum {
+    0% {
+        background-position: 0 30%;
+    }
+    100% {
+        background-position: 50% 30%;
+    }
+}
+
+.icon{
+    padding-top: 50%;
+    width: 50%;
+    position: absolute;
+    top: 25%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    pointer-events: none;
+}
+
+#sun{
+    right: 0;
+    background-image: url("../images/Logos/LightMode.png");
+}
+
+#moon{
+
+    background-image: url("../images/Logos/DarkMode.png");
+}
+
 .Intro h1 {
-    color: white;
     text-align: left;
-    font-size: clamp(1.5rem, 4vw, 4rem);
+    font-size: clamp(2rem, 3vw, 4rem);
 }
 
 
@@ -110,13 +230,20 @@ p {
     height: 100%
 }
 
+.IntroWrapper{
+    display: flex;
+    flex-direction: column;
+
+}
+
 .nav {
     overflow: visible;
     display: flex;
     flex-direction: column;
+    height: 10%;
     width: 100%;
     flex-grow: 1;
-    margin-top: auto;
+
     margin-bottom: 2%;
 }
 
@@ -124,7 +251,6 @@ p {
     overflow: visible;
     padding-top: 5%;
     display: flex;
-    flex-grow: 1;
     margin-bottom: 2%;
     justify-content: space-around;
     align-items: flex-end;
@@ -136,7 +262,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(144deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 21%, rgba(0,0,0,1) 34%, rgba(0,0,0,1) 65%, rgba(255,255,255,1) 79%, rgba(255,255,255,1) 100%);;
+    background: linear-gradient(144deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 21%, rgba(255,255,255,1) 34%, rgba(255,255,255,1) 65%, rgba(0,0,0,1) 79%, rgba(0,0,0,1) 100%);;
     background-size: 600% 600%;
     margin-right: 5%;
     margin-left: 5%;
@@ -157,7 +283,7 @@ p {
     border-radius: 1rem;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: black;
     text-align: center;
     font-size: 2vw;
     width: 100%;
@@ -241,15 +367,20 @@ p {
 }
 
 .skills{
-    overflow: hidden;
+    pointer-events: all;
+    background-color: rgba(52, 61, 70, 0.5);
+    overflow: auto;
     height: 100%;
     width: 100%;
+    border: solid 2px black;
+    border-radius: 10px;
 }
 
 .skillsImages{
     display: flex;
     flex-direction: row;
     height: 20%;
+
 
 }
 
@@ -277,15 +408,16 @@ p {
 .skillsDemos{
     display: flex;
     flex-direction: row;
-    height: 50%;
+    height: 100%;
     width: 100%;
-    border: solid 2px black;
+    border-top: solid 2px black;
     border-radius: 10px;
 }
 
 .skillsDemos > *{
     text-align: left;
-    border: solid 2px black;
+    border-right: solid 2px black;
+    border-left: solid 2px black;
     background-color: rgba(52,61,70, 0.5);
     pointer-events: all;
     overflow: auto;
@@ -340,6 +472,7 @@ p {
 
 
 .projectsContainer{
+    pointer-events: all;
     padding-left: 5%;
     padding-right: 5%;
     display: flex;
@@ -356,7 +489,7 @@ p {
     display: flex;
     height: 100%;
     width: 100%;
-    overflow: auto;
+    overflow-y: scroll;
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 1px -1px 27px 0px rgba(0,0,0,0.75);
@@ -364,12 +497,12 @@ p {
 
 .projectsHolder {
     background-color: rgba(52,61,70, 0.5);
+    overflow: auto;
     pointer-events: all;
     display: flex;
     flex-wrap: wrap;
     height: 200%;
     width: 100%;
-
 }
 
 .projectsHolder > * {
@@ -436,11 +569,19 @@ p {
 }
 
 #PDemo4{
-
+    background-image: url("../images/Gifs/Portfolio.gif");
+    background-size: cover;
+    background-position: 50% 50%;
+    height: 100%;
+    width: 100%;
 }
 
 #PDemo5{
-
+    background-image: url("../images/Previews/underConstruction.webp");
+    background-size: cover;
+    background-position: 50% 50%;
+    height: 100%;
+    width: 100%;
 }
 
 /* 3333333333333333333333333333333333333333333333333333333333333333333333333333333 */
@@ -469,26 +610,28 @@ p {
     padding-top: 5%;
     height: 80%;
     width: 100%;
-    background-color: rgba(0,0,0, 0.3);
+    background-color: rgba(0,0,0, 0.0);
 }
+
 
 #socials > * {
     display: flex;
     height: 30%;
-    width: 70%;
+    width: 100%;
     padding-top: 5%;
 }
 
 #socials h1{
-    display: flex;
-    align-items: center;
     height: 100%;
+    font-size: clamp(1.5rem, 4vw, 3rem);
+    overflow-wrap: break-word;
+    width: 80%;
+    text-align: left;
 }
 
 #socials > * > *{
-    justify-content: space-around;
     height: 100%;
-    width: 100%;
+    width: 20%;
 }
 
 .socialImg{
@@ -503,12 +646,24 @@ p {
     margin-right: 5%;
 }
 
+#socials > * > a{
+    pointer-events: all;
+    cursor: pointer;
+    width: 80%;
+
+}
+
+
 #linkInContactImg{
-    background-image: url("../images/Logos/LinkedInLogo.png");
+    background-image: url("../images/Logos/LinkedInLogo_non-stylized.png");
 }
 
 #gitHubContactImg {
     background-image: url("../images/Logos/GitHubLogo.png");
+}
+
+#googleContactImg{
+    background-image: url("../images/Logos/gmailLogo.png");
 }
 
 .mainContainerLayer3 .nav{
@@ -532,17 +687,17 @@ p {
 }
 
 .skillsGreen{
-    font-size: small;
+    font-size: xx-large;
     color:greenyellow;
 }
 
 .skillsPlum{
-    font-size: small;
+    font-size: xx-large;
     color: #26E1FF;
 }
 
 .skillsGold{
-    font-size: small;
+    font-size: xx-large;
     color: #ffc000;
 }
 
@@ -641,18 +796,34 @@ p {
         display: flex;
         flex-direction: column;
         position: relative;
+        height: 60%;
         width: 100vw;
         margin-right: 0;
         max-width: 100%;
         padding-left: 5%;
         padding-right: 5%;
     }
-    .Intro p{
-        font-size: clamp(0.5rem, 2.5vw, 2rem)
+
+    .IntroWrapper{
+
     }
+    p{
+        font-size: clamp(1.5rem, 3.5vw, 4rem)
+    }
+    .Intro p{
+        font-size: clamp(0.7rem, 2.5vw, 2rem)
+    }
+    .Intro h1{
+        font-size: clamp(1rem, 2.5vw, 3rem)
+    }
+
+    .Intro .nav {
+        max-height: 10dvh;
+    }
+
     h1{
         padding-top: 0;
-        font-size: clamp(1rem, 4vw, 3rem);
+        font-size: clamp(2rem, 4vw, 3rem);
     }
 
     #imgme{
@@ -666,7 +837,7 @@ p {
     .nav{
         display: flex;
         flex-direction: column;
-        height: auto;
+        height: 20%;
         width: 100%;
         flex-grow: 3;
         margin-top: auto;
@@ -679,56 +850,115 @@ p {
     .projectsHolder{
         height: 150%;
     }
+
+    .DarkMode{
+        bottom: clamp(0%, 4%, 10%);;
+        width: clamp(10%, 15%, 20%);
+        left: clamp(90%, 93%, 100%);
+        padding-top: clamp(10%, 15%, 20%);
+    }
+    .skillsGreen{
+        font-size: medium;
+    }
+
+    .skillsPlum{
+        font-size: medium;
+    }
+
+    .skillsGold{
+        font-size: medium;
+    }
+    #layer2dropdown{
+        border: solid 1px white;
+        width: 10%;
+        height: 8%;
+    }
+
 }
 
 @media (min-width: 501px) and (max-width: 900px) {
+
     .ImageOfMe {
         flex-direction: column;
     }
-
     .Intro {
         display: flex;
         flex-direction: column;
         position: relative;
+        height: 60%;
         width: 100vw;
         margin-right: 0;
         max-width: 100%;
         padding-left: 5%;
         padding-right: 5%;
+    }
+
+    .IntroWrapper{
 
     }
-    .Intro p{
-        font-size: clamp(1rem, 2.3vw, 1.3rem)
+    p{
+        font-size: clamp(1.5rem, 3.5vw, 4rem)
     }
+    .Intro p{
+        font-size: clamp(0.7rem, 2.5vw, 2rem)
+    }
+    .Intro h1{
+        font-size: clamp(1.5rem, 2.5vw, 3rem)
+    }
+
+    .Intro .nav {
+        max-height: 10dvh;
+    }
+
     h1{
-        font-size: clamp(1.5rem, 4vw, 2rem);
+        padding-top: 0;
+        font-size: clamp(2rem, 4vw, 3rem);
     }
 
     #imgme{
-        height: 35%
+        height: 40%
     }
+
     .button{
         line-height: var(--navHeightHalf);
         font-size: 4vw;
     }
-    .NavBar{
-        padding: 5%;
-    }
-    .nav {
+    .nav{
         display: flex;
         flex-direction: column;
-        height: auto;
+        height: 20%;
         width: 100%;
         flex-grow: 3;
         margin-top: auto;
         padding-bottom: 2%;
     }
+
+    .NavBar{
+        padding: 5%;
+    }
     .projectsHolder{
         height: 150%;
     }
+
+    .DarkMode{
+        bottom: clamp(0%, 4%, 10%);;
+        width: clamp(10%, 15%, 20%);
+        left: clamp(90%, 93%, 100%);
+        padding-top: clamp(10%, 15%, 20%);
+    }
+    .skillsGreen{
+        font-size: x-large;
+    }
+
+    .skillsPlum{
+        font-size: x-large;
+    }
+
+    .skillsGold{
+        font-size: x-large;
+    }
 }
 
-/* laptops */
 
 @media (max-height: 901px) and (min-width: 1000px) {
     .ImageOfMe{
